--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/poi-3.6-20091214.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
