--- a/.classpath
+++ b/.classpath
@@ -14,6 +14,11 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/poi-3.6-20091214.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/BaiduMapAPI.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/fastjson-1.2.9.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/okhttp-3.3.1.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/okhttputils-2_6_2.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/okio-1.9.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
